<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/welcome_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go_back_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/welcome" />

    <CheckBox
        android:id="@+id/yes_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/yes"
        android:onClick="yesChecked"/>

    <CheckBox
        android:id="@+id/no_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/yes_check"
        android:layout_below="@+id/yes_check"
        android:layout_marginTop="38dp"
        android:text="@string/no"
        android:onClick="noChecked"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/welcome_view"
        android:layout_below="@+id/welcome_view"
        android:layout_marginTop="52dp"
        android:text="@string/question" />
</RelativeLayout>